<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="register">등록</string>
    <string name="modify">수정</string>
    <string name="modify_text">수정하기</string>
    <string name="delete">삭제</string>
    <string name="delete_text">삭제하기</string>

    <string name="ok">확인</string>
    <string name="cancel">취소</string>

    <string name="title">제목</string>
    <string name="content_info">내용을 입력해주세요.</string>

    <string name="save_ask">저장하시겠습니까?</string>
    <string name="delete_ask">정말 삭제하시겠습니까?\n삭제한 정보는 복구시킬 수 없습니다.</string>

    <string name="todo_title">To-Do</string>
    <string name="todo_info">오늘 스케줄의 빈틈을 이용해 하는 일을 정의해보아요.</string>
    <string name="todo_edit_hint">할 일을 입력해주세요.</string>

    <string name="happy_point_title">오늘의 행복지수</string>
    <string name="happy_point_info">오늘 한 행동을 행복지수로 표시해보아요.</string>
    <string name="happy_point_comment_info">행복 점수를 준 이유에 대해 적어보아요.</string>

    <string name="good_and_new_title">Good and New</string>
    <string name="good_and_new_info">24시간 이내에 있었던 좋은 일 혹은 처음 했거나 경험한 일을 적어요.</string>

    <string name="diary_title">감정일기</string>
    <string name="diary_info">오늘 있었던 일들을 통해 느낀 내 감정을 정리해요.</string>
    <string name="diary_cannot_write">아쉽지만 미래의 일기는 쓸 수 없어요.</string>
    <string name="diary_input_title_empty">제목을 입력해주세요.</string>
    <string name="diary_input_content_empty">내용을 입력해주세요.</string>
    <string name="diary_save_success">일기 저장이 완료되었습니다.</string>
</resources>