<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.ui.emotion_diary.DiaryEditActivity">

    <data>
        <variable
            name="vm"
            type="app.sosocom.smallstep.presentation.ui.diary.DiaryEditViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- 툴바 -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <include
                android:id="@+id/action_bar"
                layout="@layout/actionbar_base" />

        </com.google.android.material.appbar.MaterialToolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/gray_9b"
                app:setFormatterDateText="@{vm.baseDate}"
                tools:text="2022년 6월 8일 수요일" />

            <EditText
                android:id="@+id/tv_diary_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:text="@={vm.title}"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/gray_9b" />

            <EditText
                android:id="@+id/tv_diary_content"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top"
                android:hint="@string/content_info"
                android:text="@={vm.content}"
                android:textSize="14sp"
                android:textColor="@color/black"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save_diary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@{vm.id == null ? @string/register : @string/modify}"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:enabled="@{vm.title.length() > 0 &amp;&amp; vm.content.length() > 0}"
                tools:text="@string/register" />
        </LinearLayout>

    </LinearLayout>

</layout>