<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="app.sosocom.smallstep.presentation.ui.main.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_light_gray"
        android:orientation="vertical"
        tools:context=".presentation.ui.MainActivity">

        <!-- 툴바 -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <include
                android:id="@+id/action_bar"
                layout="@layout/actionbar_main" />

        </com.google.android.material.appbar.MaterialToolbar>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:shadowColor="@color/gray_eb"
            android:shadowDx="0"
            android:shadowDy="2"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_month_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/main_color"
                    android:orientation="vertical"
                    android:padding="14dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/btn_prev_month"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="22dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_arrow_left" />

                    <TextView
                        android:id="@+id/text_current_month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/btn_next_month"
                        app:layout_constraintStart_toEndOf="@id/btn_prev_month"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="April 2018" />

                    <ImageView
                        android:id="@+id/btn_next_month"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_arrow_right" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.kizitonwose.calendarview.CalendarView
                    android:id="@+id/calendarView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cv_dayViewResource="@layout/item_calendar_day"
                    app:cv_monthHeaderResource="@layout/include_calendar_header"
                    app:cv_orientation="horizontal"
                    app:cv_outDateStyle="endOfGrid"
                    app:cv_scrollMode="paged"
                    app:layout_constraintTop_toBottomOf="@id/cl_month_bar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_todo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:shadowColor="@color/gray_eb"
            android:shadowDx="0"
            android:shadowDy="2"
            android:visibleIf="@{vm.selDailyWriteBundle.dailyTodoBundle != null}"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="6dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@+id/card_calendar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="12dp">

                <TextView
                    android:id="@+id/todo_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/todo_title"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/todo_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/gray_97"
                    tools:text="1/5"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_happy_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:shadowColor="@color/gray_eb"
            android:shadowDx="0"
            android:shadowDy="2"
            android:visibleIf="@{vm.selDailyWriteBundle.dailyHappyPointBundle != null}"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="6dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@+id/card_todo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="12dp">

                <TextView
                    android:id="@+id/happy_point_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/happy_point_title"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/happy_point_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/gray_97"
                    tools:text="4.2"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_good_and_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:shadowColor="@color/gray_eb"
            android:shadowDx="0"
            android:shadowDy="2"
            android:visibleIf="@{vm.selDailyWriteBundle.goodAndNew != null}"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="6dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@+id/card_happy_point"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="12dp">

                <TextView
                    android:id="@+id/good_and_new_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/good_and_new_title"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/black" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_emotion_diary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:shadowColor="@color/gray_eb"
            android:shadowDx="0"
            android:shadowDy="2"
            android:visibleIf="@{vm.selDailyWriteBundle.diary != null}"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="6dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@+id/card_good_and_new"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="12dp">

                <TextView
                    android:id="@+id/emotion_diary_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/diary_title"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/black" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_add_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main_color"
            app:borderWidth="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_add_diary"
            app:layout_constraintEnd_toEndOf="@+id/btn_add_diary"
            app:srcCompat="@drawable/ic_add_todo_list"
            app:tint="@color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_add_diary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main_color"
            app:borderWidth="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/floatingActionButton"
            app:layout_constraintEnd_toEndOf="@+id/floatingActionButton"
            app:srcCompat="@drawable/ic_add_diary"
            app:tint="@color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/pastel_orange"
            app:borderWidth="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_add_white"
            app:tint="@color/white" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>